--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "0.21.4",
     "clsx": "^1.1.1",
+    "lscache": "^1.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
     "react-color": "^2.19.3",
