--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "react-dom": "^17.0.2",
     "react-jss": "^10.8.2",
     "react-multi-select-component": "^4.1.14",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1"
   },
