--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.22.5",
     "react-jss": "^10.8.2",
     "react-multi-select-component": "^4.1.14",
     "react-redux": "^7.2.6",
