--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.22.5",
     "react-jss": "^10.8.2",
+    "react-loader-spinner": "^4.0.0",
     "react-multi-select-component": "^4.1.14",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
