--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react-multi-select-component": "^4.1.14",
     "react-redux": "^7.2.6",
     "react-router-dom": "^6.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.0",
     "react-select": "^5.2.1",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
