--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.3",
+    "util": "^0.12.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
