--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://zaolil.github.io/Todo-App",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
@@ -10,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "0.21.4",
     "clsx": "^1.1.1",
+    "gh-pages": "^3.2.3",
     "lscache": "^1.3.0",
     "normalize.css": "^8.0.1",
     "react": "^17.0.2",
@@ -31,6 +33,8 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
