--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "https://zaolil.github.io/Todo-App",
   "name": "todo",
   "version": "0.1.0",
   "private": true,
@@ -11,6 +10,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "0.21.4",
     "clsx": "^1.1.1",
+    "firebase": "^9.6.2",
     "gh-pages": "^3.2.3",
     "lscache": "^1.3.0",
     "normalize.css": "^8.0.1",
@@ -28,13 +28,13 @@
     "react-toastify": "^8.1.0",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
+    "redux-persist": "^6.0.0",
     "styled-components": "^5.3.3",
     "util": "^0.12.4",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "sh ./deploy-surge.sh",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
