--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "react": "^17.0.2",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
+    "react-google-login": "^5.2.2",
     "react-hook-form": "^7.22.5",
     "react-jss": "^10.8.2",
     "react-loader-spinner": "^4.0.0",
